# nodesigfinal

./: CMakeLists.txt  README.md  gml2edgelist.py  gml2mat.py  main.cpp  run_nodesigfinal_thesis.sh
lib/: Graph.h  Model.h  Utilities.h
src/: Graph.cpp
tests/: karate.edgelist
tools/: auroc.py  auroc_compatible.py  classification.py  get_auc.sh  read_binary_emb.py  read_npy.py  running_time.sh  split.sh
